--- a/trungtamsathachmoto.com/login_style.css
+++ b/trungtamsathachmoto.com/login_style.css
@@ -1,22 +1,51 @@
+*{
+	margin: 0px;
+	padding: 0px;
+}
 body{
 	position: relative;
 	background-color: #ffffff;
 }
 #login{
+	display: block;
 	width: 300px;
-	height:130px;
-	margin:10% auto; 
+	height: 150px;
+	margin: 10% auto; 
 	text-align: center;
 	font-size: 1.3em;
-	background-color: #41a7cf;
+	background-color: #4751bf;
+	border-radius: 5px;
 }
 label{
-	padding: 8px 10px;
+	padding: 10px 10px;
 }
 input{
-	margin-top: 20px;
+	margin-top:0px;
 }
-#banner{
-	background-color: #535252;
-	height: 100px;
+#webadmincontrolbanner h1{
+	margin-top: 0px;
+	background-color: #4799bf;
+	text-align: right;
+	height: 80px;
+	color: white;
+
+}
+#webadmincontrolbanner h4{
+	font-family: "Times News Romans";
+	background-color:#4799bf;
+	padding: 3px;
+	width: 15%;
+	position: absolute;
+	top: 30px;
+	color: yellowgreen;
+}
+.color{
+	border-radius: 3px;
+	width: 60px;
+	margin: 3px 0px 3px 25px;
+}
+#title_dangnhap p{
+	background-color: #007959;
+	border-radius: 5px;
+	color: #ffffff;
 }
