--- a/trungtamsathachmoto/PagePanel.css
+++ b/trungtamsathachmoto/PagePanel.css
@@ -1,9 +1,12 @@
-#wapper{width:1000px;margin: auto;background-color: #0044cc}
+
+body{background-color: #C0DEED;
+}
+#wapper{width:1000px;margin: auto;background-color: #0044cc;}
 #header{width:100%;}
 #header ul li{display: inline-block;padding: 0px 10px;margin: 2px;border: 1px solid #c1c1c1;background-color: #2d5986;}
 #header ul li:first-child{margin-right:18.3em;background-color: #0044cc;border:none;}
 #header ul{text-align: right;}
-
+header ul li a:link{text-decoration: none;color:white;}
 #rightPanel,#content{float:left;
 	min-height: 30em;
 	border:1px solid #c1c1c1;
@@ -21,7 +24,7 @@ background-color: #669999;}
 #rightPanel ul li a{text-decoration: none;}
 
 #content div{width:100%;height:100%;color:black;background-color:#ffb84d; }
-table ,tr,th{border:1px solid #ccc;}
+table ,tr,th{border:1px solid #ccc;font-size: 1em;}
 td{margin:5px;background-color:#003300;color:white;font-weight: bold;}
 
 .delete{
@@ -30,6 +33,8 @@ td{margin:5px;background-color:#003300;color:white;font-weight: bold;}
 }
 #GioiThieu form textarea {width:100%;box-sizing: border-box;}
 #TrangChu form textarea {width:100%;box-sizing: border-box;}
+#HoiDap form textarea {width:100%;box-sizing: border-box;}
 input[type=submit]{
 	border-radius: 4px;
 }
+#lichthi{overflow:scroll;}
